--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <p>Looking for an entry-level position in IT Sector to expand my
                         knowledge and skills and work for the overall growth of an
                         organization.</p>
-                    <a href="Resume.pdf" target="_blank">Download CV</a>
+                    <a href="Resume.pdf" target="_blank">Download Resume</a>
                 </div>
             </div>
         </div>
