--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                      <i class="fab fa-laravel"></i>
-                        <div class="text">Laravel</div>
+                      <i class="fab fa-javaScript"></i>
+                        <div class="text">JavaScript</div>
                         <p>(Beginner)</p>
                     </div>
                 </div>
@@ -202,7 +202,7 @@
                         <div class="text">Mumbai University</div>
                         <p>Diploma in Computer Engineering
                           [JUNE 2016] – [JUNE 2018]
-                          TOTAL MARKS- 80%
+                          TOTAL MARKS- 81%
                           </p>
                     </div>
                 </div>
