--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                      <i class="fab fa-code"></i>
+                      <i class="fa fa-code"></i>
                         <div class="text">JavaScript</div>
                         <p>(Beginner)</p>
                     </div>
